# mimir

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  Untitled.dungeondraft_map  tarpaulin.toml
crates/mimir/: Cargo.toml  tauri.conf.json
crates/mimir-5etools-splitter/: Cargo.toml
crates/mimir-core/: Cargo.toml  diesel.toml
crates/mimir-core/bindings/bindings/: Campaign.ts  CampaignHomebrewItem.ts  Character.ts  CharacterProficiency.ts  CharacterResponse.ts  Document.ts  Map.ts
crates/mimir-core/migrations/001_catalog_sources/: down.sql  up.sql
crates/mimir-core/migrations/002_monsters/: down.sql  up.sql
crates/mimir-core/migrations/003_items/: down.sql  up.sql
crates/mimir-core/migrations/004_spells/: down.sql  up.sql
crates/mimir-core/migrations/005_join_tables/: down.sql  up.sql
crates/mimir-core/migrations/006_character_building/: down.sql  up.sql
crates/mimir-core/migrations/007_remaining_entities/: down.sql  up.sql
crates/mimir-core/migrations/008_catalog_fts/: down.sql  up.sql
crates/mimir-core/migrations/009_campaigns/: down.sql  up.sql
crates/mimir-core/migrations/010_campaign_assets/: down.sql  up.sql
crates/mimir-core/migrations/011_documents/: down.sql  up.sql
crates/mimir-core/migrations/012_characters/: down.sql  up.sql
crates/mimir-core/migrations/013_character_classes_feats/: down.sql  up.sql
crates/mimir-core/migrations/014_character_details/: down.sql  up.sql
crates/mimir-core/migrations/015_maps/: down.sql  up.sql
crates/mimir-core/migrations/016_module_entities/: down.sql  up.sql
crates/mimir-core/migrations/017_map_overlays/: down.sql  up.sql
crates/mimir-core/migrations/018_remaining_catalog/: down.sql  up.sql
crates/mimir-core/migrations/019_books/: down.sql  up.sql
crates/mimir-core/migrations/020_class_features/: down.sql  up.sql
crates/mimir-core/migrations/021_fog/: down.sql  up.sql
crates/mimir-core/migrations/022_map_pois/: down.sql  up.sql
crates/mimir-core/migrations/023_character_features/: down.sql  up.sql
crates/mimir-core/migrations/024_campaign_homebrew_items/: down.sql  up.sql
crates/mimir-core/migrations/025_campaign_homebrew_monsters/: down.sql  up.sql
crates/mimir-core/migrations/026_campaign_homebrew_spells/: down.sql  up.sql
crates/mimir-core/migrations/027_document_sort_order/: down.sql  up.sql
crates/mimir-core/migrations/028_document_sort_order_init/: down.sql  up.sql
crates/mimir-core/migrations/029_homebrew_module_monsters/: down.sql  up.sql
crates/mimir-core/schema/: bundle-schemas.mjs  download-schemas.sh  package-lock.json  package.json
crates/mimir-core/src/: db.rs  lib.rs  schema.rs  test_utils.rs  tokens.rs  utils.rs
crates/mimir-core/src/catalog/: action.rs  background.rs  class.rs  condition.rs  cult.rs  deity.rs  feat.rs  item.rs  language.rs  mod.rs  monster.rs  object.rs  optionalfeature.rs  psionic.rs  race.rs  reward.rs  spell.rs  table.rs  trap.rs  types.rs  variantrule.rs  vehicle.rs
crates/mimir-core/src/dal/: mod.rs
crates/mimir-core/src/fts/: entry_flattener.rs  mod.rs  search.rs
crates/mimir-core/src/import/: collector.rs  discovery.rs  filter.rs  images.rs  mod.rs  service.rs  srd.rs
crates/mimir-core/src/models/: mod.rs
crates/mimir-core/src/seed/: dev.rs  mod.rs
crates/mimir-core/tests/: catalog_import.rs  srd_smoke_test.rs
crates/mimir-dm/: Cargo.toml  build.rs  tauri.conf.json
crates/mimir-dm-agent-test/: Cargo.toml
crates/mimir-dm-agent-test/src/: executor.rs
crates/mimir-dm-core/: Cargo.toml
crates/mimir-dm-core/src/: error.rs  lib.rs  schema.rs
crates/mimir-dm-llm/: Cargo.toml
crates/mimir-dm-mcp/: Cargo.toml
crates/mimir-dm-mcp/plugin/: .mcp.json  README.md  install-macos.sh
crates/mimir-dm-mcp/src/: handler.rs  lib.rs  main.rs
crates/mimir-dm-mcp/tests/: mcp_tools.rs
crates/mimir-dm-print/: Cargo.toml
crates/mimir-dm-print/src/: builder.rs  campaign.rs  character.rs  lib.rs  map_renderer.rs  service.rs  world.rs
crates/mimir-dm/frontend/: package.json
crates/mimir-dm/src/: app_init.rs  embedded_test_book.rs  main.rs  seed_templates.rs  state.rs
crates/mimir-mapgen/: Cargo.toml
crates/mimir-mapgen/docs/: dungeondraft-wall-format.md
crates/mimir-mapgen/examples/: arctic.dungeondraft_map  arctic.yaml  cave.dungeondraft_map  cave.yaml  desert.dungeondraft_map  desert.yaml  forest.dungeondraft_map  forest.yaml  forest_river.dungeondraft_map  forest_river.yaml  grassland.dungeondraft_map  grassland.yaml  ice_lake.dungeondraft_map  ice_lake.yaml  island_arctic.dungeondraft_map  island_arctic.yaml  island_forest.dungeondraft_map  island_forest.yaml  island_fort.dungeondraft_map  island_fort.yaml  island_tropical.dungeondraft_map  island_tropical.yaml  lake.dungeondraft_map  lake.yaml  swamp.dungeondraft_map  swamp.yaml  tavern_river.dungeondraft_map  tavern_river.yaml
crates/mimir-mapgen/src/: assets.rs  biomes.rs  contour.rs  curves.rs  distribution.rs  elevation.rs  lib.rs  main.rs  noise_gen.rs  objects.rs  paths.rs  pipeline.rs  polygons.rs  rooms.rs  terrain.rs  water.rs
crates/mimir-mapgen/tests/: cli_integration.rs  format_roundtrip.rs  polygon_snapshots.rs
crates/mimir-mcp/: Cargo.toml
crates/mimir-mcp/plugin/: .mcp.json  README.md  plugin.json
crates/mimir-mcp/src/: context.rs  error.rs  handler.rs  lib.rs  main.rs  response.rs
crates/mimir-print/: Cargo.toml
crates/mimir-print/src/: builder.rs  commands.rs  embedded_templates.rs  lib.rs  map_renderer.rs  markdown.rs  service.rs  world.rs
crates/mimir/frontend/: chat.html  context-debug.html  dm-map.html  index.html  log-viewer.html  package-lock.json  package.json  player-display.html  sources.html  tsconfig.json  vite.config.ts  vitest.config.ts
crates/mimir/src/: error.rs  lib.rs  main.rs  state.rs
mimir-dm-bu/mimir-llm-eval/: .gitignore  Cargo.toml
mimir-dm-bu/mimir-llm-eval/results/: .gitkeep
mimir-dm-bu/mimir-llm-eval/src/: lib.rs  main.rs  report.rs  runner.rs  tasks.rs
mimir-dm-bu/mimir-llm-eval/tasks/: edge_cases.json  generation.json  reasoning.json  tool_calling.json
(+2374 files in other folders)
