[package]
name = "mimir-5etools-splitter"
version = "0.2.3"
edition = "2021"
authors = ["Mimir Contributors"]
description = "Splits 5etools repositories into book-specific archives"
license = "MIT OR Apache-2.0"

[[bin]]
name = "mimir-5esplit"
path = "src/main.rs"

[[bin]]
name = "mimir-5etest"
path = "src/bin/load_test.rs"

[[bin]]
name = "gen-dev-book"
path = "src/bin/gen_dev_book.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
indicatif = "0.17"
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }

# Load tester dependencies
mimir-dm-core = { path = "../mimir-dm-core" }
diesel = { workspace = true }
colored = "2.0"

[dev-dependencies]