[package]
name = "mimir-core"
version = "0.5.1"
edition = "2021"
description = "Mimir v0.5 core library - models, services, and data access"

[dependencies]
# Database
diesel = { workspace = true }
diesel_migrations = { workspace = true }
libsqlite3-sys = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Time
chrono = { workspace = true }

# UUID generation
uuid = { workspace = true }

# Logging
tracing = { workspace = true }

# Text processing
once_cell = "1.19"
regex = "1.10"

# Macros
paste = "1.0"

# File system
walkdir = { workspace = true }

# Archive handling
tar = "0.4"
flate2 = "1.0"

# Encoding
base64 = "0.22"
tempfile.workspace = true

[dev-dependencies]
tempfile = { workspace = true }
ts-rs = { workspace = true }
