[package]
name = "mimir-dm-agent-test"
version = "0.1.2"
edition = "2021"
description = "Agent test harness for Mimir DM"
authors = ["Mimir Team"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "agent-test"
path = "src/main.rs"

[dependencies]
# Our crates
mimir-dm = { path = "../mimir-dm" }
mimir-dm-core = { path = "../mimir-dm-core" }
mimir-dm-llm = { path = "../mimir-dm-llm" }

# Core dependencies
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
diesel = { workspace = true }
regex = { workspace = true }

# CLI dependencies
clap = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }
