[package]
name = "mimir-dm-llm"
version = "0.2.0"
edition = "2021"
description = "LLM provider abstraction layer for Mimir"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/colliery-io/mimir"
readme = "README.md"
autobenches = false
autotests = false

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde_yaml = { workspace = true }
url = { workspace = true }
similar = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[test]]
name = "main"
path = "tests/main.rs"