[package]
name = "mimir-dm-print"
version = "0.2.3"
edition = "2021"
description = "Print and PDF generation for Mimir using Typst"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/colliery-io/mimir"
readme = "README.md"

[dependencies]
# Typst for document compilation
typst = "0.12"
typst-pdf = "0.12"
ecow = "0.2"

# Mimir core types
mimir-dm-core = { path = "../mimir-dm-core" }

# Core dependencies
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }

# Markdown processing
gray_matter = { workspace = true }
pulldown-cmark = { workspace = true }

# Font handling
fontdb = "0.21"

# File path handling
walkdir = { workspace = true }

# Image processing for map rendering
image = "0.25"
imageproc = "0.25"
rusttype = "0.9"

# Base64 encoding for Tauri commands
base64 = { workspace = true }

# Regex for 5etools tag stripping
regex = { workspace = true }

# Tauri integration
tauri = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
tauri-commands = ["tauri"]
