[package]
name = "mimir-dm"
version = "0.1.2"
edition = "2021"
description = "Mimir D&D Campaign Assistant - Desktop Application"
authors = ["Mimir Team"]
license = "MIT OR Apache-2.0"
default-run = "mimir"

[lib]
name = "mimir_dm"
path = "src/lib.rs"

[[bin]]
name = "mimir"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

# Our crates
mimir-dm-core = { version = "0.1.2", path = "../mimir-dm-core" }
mimir-dm-llm = { version = "0.1.2", path = "../mimir-dm-llm" }
mimir-dm-print = { version = "0.1.2", path = "../mimir-dm-print" }

# Core dependencies
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
directories = { workspace = true }
diesel = { workspace = true, features = ["r2d2"] }
chrono = { workspace = true }
tera = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
base64 = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
tempfile = { workspace = true }
async-trait.workspace = true
uuid = { workspace = true }
paste = { workspace = true }
regex = { workspace = true }
image = { workspace = true }
which = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
