[package]
name = "mimir-llm-eval"
version = "0.2.3"
edition = "2021"
authors = ["Mimir Contributors"]
description = "LLM model evaluation suite for comparing providers and models"
license = "MIT OR Apache-2.0"

[[bin]]
name = "llm-eval"
path = "src/main.rs"

[dependencies]
# Core utilities
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Progress display
indicatif = "0.17"
colored = "2.0"

# Internal dependencies
mimir-dm-llm = { path = "../mimir-dm-llm" }

[dev-dependencies]
